--- a/тест/index.html
+++ b/тест/index.html
@@ -204,7 +204,13 @@
     });
   </script>
 </body>
-    <footer><!-- Elfsight Business Hours | BH: Custom Hours text issue fix (WIDGETS-3817) -->
+    <footer>
+      <!-- Elfsight Business Hours | BH: Custom Hours text issue fix (WIDGETS-3817) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-a94b9242-3cb4-4b34-a0ce-e147bb08e272" data-elfsight-app-lazy></div></footer>
+<div class="elfsight-app-a94b9242-3cb4-4b34-a0ce-e147bb08e272" data-elfsight-app-lazy></div>
+      <!-- Elfsight Social Feed | test -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-1c4eb3e5-b00a-4b4f-b906-c687ae03d761" data-elfsight-app-lazy></div>
+    
+    </footer>
 </html>
