--- a/тест/index.html
+++ b/тест/index.html
@@ -208,9 +208,8 @@
       <!-- Elfsight Business Hours | BH: Custom Hours text issue fix (WIDGETS-3817) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
 <div class="elfsight-app-a94b9242-3cb4-4b34-a0ce-e147bb08e272" data-elfsight-app-lazy></div>
-      <!-- Elfsight Social Feed | test -->
-<script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-1c4eb3e5-b00a-4b4f-b906-c687ae03d761" data-elfsight-app-lazy></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.2.10/iframeResizer.min.js"></script>
+<iframe onload="iFrameResize(this)" src="https://1c4eb3e5b00a4b4fb906c687ae03d761.elf.site" style="border:none;width:100%;"></iframe>
     
     </footer>
 </html>
