--- a/тест/index.html
+++ b/тест/index.html
@@ -121,9 +121,9 @@
   </style>
 </head>
 <body>
-<!-- Elfsight Website Translator | TEST API Copy -->
+<!-- Elfsight Popup | Popup: Close Button for Modal Layout (WIDGETS-3948) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-becc3f6a-a78d-4dce-ac75-34fd3d0e6940" data-elfsight-app-lazy></div>
+<div class="elfsight-app-bdbaf426-5c66-491a-a0c1-302ae025b6c0" data-elfsight-app-lazy></div>
   <header>
     <h1>Салон красоты «Прекрасная жизнь»</h1>
   </header>
