--- a/тест/index.html
+++ b/тест/index.html
@@ -163,9 +163,9 @@
 
     <!-- Контейнер с календарем -->
     <div class="calendar-flex">
-<!-- Elfsight Event Calendar | EC: Grid (WIDGETS-3988) Copy -->
+<!-- Elfsight Event Calendar | EC: Grid (WIDGETS-3988) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-4685b8b5-b898-4da3-aabb-d2c2cc3a4b75" data-elfsight-app-lazy></div>
+<div class="elfsight-app-c275fc85-72a9-4e50-ae77-92b5c4f2045e" data-elfsight-app-lazy></div>
     </div>
 
     <section id="contact">
@@ -224,9 +224,9 @@
   </script>
 
   <footer>
-    <!-- Elfsight Event Calendar | EC: Grid (WIDGETS-3988) Copy -->
+<!-- Elfsight Event Calendar | EC: Grid (WIDGETS-3988) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-4685b8b5-b898-4da3-aabb-d2c2cc3a4b75" data-elfsight-app-lazy></div>
+<div class="elfsight-app-c275fc85-72a9-4e50-ae77-92b5c4f2045e" data-elfsight-app-lazy></div>
   </footer>
 </body>
 </html>
