--- a/тест/index.html
+++ b/тест/index.html
@@ -224,9 +224,9 @@
   </script>
 
   <footer>
-<!-- Elfsight Event Calendar | EC: Grid (WIDGETS-3988) -->
+<!-- Elfsight Appointment Booking | AB: No slot blocking w/ GC (WIDGETS-3978) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-c275fc85-72a9-4e50-ae77-92b5c4f2045e" data-elfsight-app-lazy></div>
+<div class="elfsight-app-fa86ed27-e5de-481d-85b9-e41e823d3607" data-elfsight-app-lazy></div>
   </footer>
 </body>
 </html>
