--- a/тест/index.html
+++ b/тест/index.html
@@ -163,9 +163,9 @@
 
     <!-- Контейнер с календарем -->
     <div class="calendar-flex">
-<!-- Elfsight Event Calendar | EC: Grid (WIDGETS-3988) -->
+<!-- Elfsight Event Calendar | EC: prod -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-c275fc85-72a9-4e50-ae77-92b5c4f2045e" data-elfsight-app-lazy></div>
+<div class="elfsight-app-f9768a30-5d1d-47fc-859c-6d5f4a1348d3" data-elfsight-app-lazy></div>
     </div>
 
     <section id="contact">
