--- a/тест/index.html
+++ b/тест/index.html
@@ -163,13 +163,7 @@
 
     <!-- Контейнер с календарем -->
     <div class="calendar-flex">
-      <h1>PROD</h1>
-<!-- Elfsight Event Calendar | EC: prod -->
-<script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-f9768a30-5d1d-47fc-859c-6d5f4a1348d3" data-elfsight-app-lazy></div>
-
-
-      <h1>FIX</h2>
+      <h1>Fixed Calendar</h2>
       <!-- Elfsight Event Calendar | EC: Normal line-height (WIDGETS-3946) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
 <div class="elfsight-app-8fe60273-6ee7-4149-9410-7b5f95e8b550" data-elfsight-app-lazy></div>
