--- a/тест/index.html
+++ b/тест/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      line-height: 1.6;
+      line-height: normal;
     }
     header {
       background: #d63384;
