--- a/тест/index.html
+++ b/тест/index.html
@@ -225,9 +225,8 @@
   </script>
 
   <footer>
-<!-- Elfsight Appointment Booking | AB: No slot blocking w/ GC (WIDGETS-3978) -->
-<script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-fa86ed27-e5de-481d-85b9-e41e823d3607" data-elfsight-app-lazy></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.2.10/iframeResizer.min.js"></script>
+<iframe onload="iFrameResize(this)" src="https://0313de278c0c4efeb2f3657a8b2640c0.elf.site" style="border:none;width:100%;"></iframe
   </footer>
 </body>
 </html>
