--- a/тест/index.html
+++ b/тест/index.html
@@ -225,8 +225,9 @@
   </script>
 
   <footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.2.10/iframeResizer.min.js"></script>
-<iframe onload="iFrameResize(this)" src="https://8d8ead704f0b487dad8ed57b1e6089d4.elf.site" style="border:none;width:100%;"></iframe
+<!-- Elfsight All-in-One Reviews | Reviews: Carousel Arrows (WIDGETS-3983) -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-cd53b822-c271-463f-945d-06612932439b" data-elfsight-app-lazy></div>
   </footer>
 </body>
 </html>
