--- a/тест/index.html
+++ b/тест/index.html
@@ -222,8 +222,17 @@
 
   <footer>
     <!-- Elfsight All-in-One Reviews | Reviews: Carousel Arrows (WIDGETS-3983) -->
+    <h1>Our Reviews</h1>
 <script src="https://elfsightcdn.com/platform.js" async></script>
 <div class="elfsight-app-cd53b822-c271-463f-945d-06612932439b" data-elfsight-app-lazy></div>
+    <h1>Our Socials</h1>
+    <!-- Elfsight Social Feed | SF: Carousel Arrows (WIDGETS-3983) -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-905200a1-622c-4d14-831f-e9be9bf96abc" data-elfsight-app-lazy></div>
+    <h1>Our Portfolio</h1>
+    <!-- Elfsight Photo Gallery | Portfolio: Carousel Arrows (WIDGETS-3983) -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-168fc05d-1c48-4e13-ac24-aeb1a1375d67" data-elfsight-app-lazy></div>
   </footer>
 </body>
 </html>
