--- a/тест/index.html
+++ b/тест/index.html
@@ -124,6 +124,15 @@
       border-radius: 8px;
     }
 
+      footer {
+    max-height: 300px;
+    overflow: hidden;
+  }
+
+  footer .elfsight-app-a7790ae8-06d2-4cff-8b20-257c948d72c0 {
+    height: 300px !important;
+  }
+
     /* Responsive */
     @media (max-width: 600px) {
       nav a {
@@ -132,6 +141,7 @@
       }
     }
   </style>
+
 </head>
 <body>
   <header>
@@ -220,7 +230,7 @@
     });
   </script>
 
-  <footer style="max-height:300px">
+  <footer>
 <!-- Elfsight Podcast Player | PP: Playlist crop fixed (WIDGETS-3930) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
 <div class="elfsight-app-a7790ae8-06d2-4cff-8b20-257c948d72c0" data-elfsight-app-lazy></div>
