--- a/тест/index.html
+++ b/тест/index.html
@@ -231,9 +231,8 @@
   </script>
 
   <footer>
-<!-- Elfsight Podcast Player | PP: Playlist crop fixed (WIDGETS-3930) -->
-<script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-a7790ae8-06d2-4cff-8b20-257c948d72c0" data-elfsight-app-lazy></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.2.10/iframeResizer.min.js"></script>
+<iframe onload="iFrameResize(this)" src="https://c7895d8004b54acfb9f83dfdfcac7e58.elf.site/" style="border:none;width:100%;"></iframe>	
   </footer>
 </body>
 </html>
