--- a/тест/index.html
+++ b/тест/index.html
@@ -231,8 +231,9 @@
   </script>
 
   <footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.2.10/iframeResizer.min.js"></script>
-<iframe onload="iFrameResize(this)" src="https://c7895d8004b54acfb9f83dfdfcac7e58.elf.site/" style="border:none;width:100%;"></iframe>	
+<!-- Elfsight Form Builder | FB: Phone Masks (WIDGETS-928) -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-284db57b-a8f2-488e-9394-951b0124fff3" data-elfsight-app-lazy></div>
   </footer>
 </body>
 </html>
