--- a/тест/index.html
+++ b/тест/index.html
@@ -144,6 +144,9 @@
 
 </head>
 <body>
+     <!-- Elfsight Sales Notification | SN: Deactivation (WIDGETS-1250) -->
+<script async='true' src='https://elfsightcdn.com/platform.js'/>
+<div class='elfsight-app-d78ace89-0fcb-480a-be47-ece2dbdcd164' data-elfsight-app-lazy='true'/>
   <header>
     <h1>Салон красоты «Прекрасная жизнь»</h1>
   </header>
@@ -231,9 +234,6 @@
   </script>
 
   <footer>
-<!-- Elfsight Form Builder | FB: Phone Masks (WIDGETS-928) -->
-<script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-284db57b-a8f2-488e-9394-951b0124fff3" data-elfsight-app-lazy></div>
   </footer>
 </body>
 </html>
