--- a/тест/index.html
+++ b/тест/index.html
@@ -144,9 +144,9 @@
 
 </head>
 <body>
-     <!-- Elfsight Sales Notification | SN: Deactivation (WIDGETS-1250) -->
-<script async='true' src='https://elfsightcdn.com/platform.js'/>
-<div class='elfsight-app-d78ace89-0fcb-480a-be47-ece2dbdcd164' data-elfsight-app-lazy='true'/>
+<!-- Elfsight Sales Notification | SN: Deactivation (WIDGETS-1250) -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-d78ace89-0fcb-480a-be47-ece2dbdcd164" data-elfsight-app-lazy></div>
   <header>
     <h1>Салон красоты «Прекрасная жизнь»</h1>
   </header>
