--- a/тест/index.html
+++ b/тест/index.html
@@ -144,9 +144,6 @@
 
 </head>
 <body>
-<!-- Elfsight Sales Notification | SN: Deactivation (WIDGETS-1250) -->
-<script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-d78ace89-0fcb-480a-be47-ece2dbdcd164" data-elfsight-app-lazy></div>
   <header>
     <h1>Салон красоты «Прекрасная жизнь»</h1>
   </header>
@@ -234,6 +231,9 @@
   </script>
 
   <footer>
+    <!-- Elfsight Facebook Comments | FC: Localization (WIDGETS-3627) -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-9005e68c-0c52-4f7c-91b6-998797d68db6" data-elfsight-app-lazy></div>
   </footer>
 </body>
 </html>
