--- a/тест/index.html
+++ b/тест/index.html
@@ -144,9 +144,9 @@
 
 </head>
 <body>
-  <!-- Elfsight Facebook Share Button | FSB: Localization (WIDGETS-3629) -->
+<!-- Elfsight Facebook Share Button | Untitled Facebook Share Button -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-72755e73-b5c8-4776-a4b1-0e3a67eaa58d" data-elfsight-app-lazy></div>
+<div class="elfsight-app-9b047b88-1490-420a-99a9-c5f52a5710b9" data-elfsight-app-lazy></div>
   <header>
     <h1>Салон красоты «Прекрасная жизнь»</h1>
   </header>
