--- a/тест/index.html
+++ b/тест/index.html
@@ -124,13 +124,8 @@
       border-radius: 8px;
     }
 
-      footer {
-    max-height: 300px;
-    overflow: hidden;
-  }
-
-  footer .elfsight-app-a7790ae8-06d2-4cff-8b20-257c948d72c0 {
-    height: 300px !important;
+      div:empty {
+    display: none;
   }
 
     /* Responsive */
@@ -234,9 +229,13 @@
   </script>
 
   <footer>
-    <!-- Elfsight Facebook Comments | FC: Localization (WIDGETS-3627) -->
+<!-- Elfsight Countdown Timer | CT: prod -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-9005e68c-0c52-4f7c-91b6-998797d68db6" data-elfsight-app-lazy></div>
+<div class="elfsight-app-7d94c354-4968-4757-8cf6-fbfa2cd24030" data-elfsight-app-lazy></div>
+
+    <!-- Elfsight Countdown Timer | CT: shadow dom (WIDGETS-4064) -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-bfd7ee9b-4aaa-420c-9718-ea67480b0a5e" data-elfsight-app-lazy></div>
   </footer>
 </body>
 </html>
