--- a/тест/index.html
+++ b/тест/index.html
@@ -116,6 +116,12 @@
       div:empty {
     display: none;
   }
+      footer {
+    display: flex;
+    flex-direction: column;
+    width: 350px; /* условная мобильная ширина */
+    border: 2px solid red;
+  }
 
     /* Responsive */
     @media (max-width: 600px) {
@@ -216,9 +222,9 @@
 
   <footer>
 
-<!-- Elfsight Countdown Timer | CT: shadow dom (WIDGETS-4064) -->
+<!-- Elfsight Timeline | test -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-bfd7ee9b-4aaa-420c-9718-ea67480b0a5e" data-elfsight-app-lazy></div>
+<div class="elfsight-app-e8acb91e-c672-4213-b07a-3d42dbed8c41" data-elfsight-app-lazy></div>
 
   </footer>
 </body>
