--- a/тест/index.html
+++ b/тест/index.html
@@ -116,11 +116,12 @@
       div:empty {
     display: none;
   }
-      footer {
+@external {
+  footer {
     display: flex;
-    width: 400px; /* условная мобильная ширина */
-    border: 2px solid red;
+    width: 350px;
   }
+}
 
     /* Responsive */
     @media (max-width: 600px) {
