--- a/тест/index.html
+++ b/тест/index.html
@@ -113,27 +113,6 @@
       margin-right: 8px;
     }
 
-      div:empty {
-    display: none;
-  }
-@external {
-  #root, footer {
-    display: flex !important;
-    flex-direction: column !important;
-  }
-
-  [class*="Preview__Container-sc"] {
-    display: revert;
-    justify-content: revert;
-    align-items: revert;
-    min-height: revert;
-    width: revert;
-    padding: revert;
-    box-sizing: revert;
-    background: revert;
-  }
-  
-}
 
     /* Responsive */
     @media (max-width: 600px) {
@@ -234,9 +213,9 @@
 
   <footer>
 
-<!-- Elfsight Timeline | test -->
+<!-- Elfsight Timeline | [jitter-broken] -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-e8acb91e-c672-4213-b07a-3d42dbed8c41" data-elfsight-app-lazy></div>
+<div class="elfsight-app-bf66fafa-ea03-49f0-b9c0-83b7370ffb69" data-elfsight-app-lazy></div>
 
   </footer>
 </body>
