--- a/тест/index.html
+++ b/тест/index.html
@@ -113,6 +113,12 @@
       margin-right: 8px;
     }
 
+    footer {
+  display: flex;          /* Превращаем футер в flex-контейнер */
+  flex-direction: column; /* Чтобы виджет выстраивался вертикально */
+  width: 350px;           /* Имитируем "мобильную" ширину */
+  border: 2px solid red;  /* Чтобы визуально видеть границы контейнера */
+}
 
     /* Responsive */
     @media (max-width: 600px) {
@@ -213,9 +219,9 @@
 
   <footer>
 
-<!-- Elfsight Timeline | [jitter-broken] -->
+<!-- Elfsight Timeline | test -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-bf66fafa-ea03-49f0-b9c0-83b7370ffb69" data-elfsight-app-lazy></div>
+<div class="elfsight-app-e8acb91e-c672-4213-b07a-3d42dbed8c41" data-elfsight-app-lazy></div>
 
   </footer>
 </body>
