--- a/te$t/index.html
+++ b/te$t/index.html
@@ -227,9 +227,9 @@ footer {
 
   <footer>
 
-<!-- Elfsight Timeline | Timeline: Flex Container Fixed (WIDGETS-3947) -->
+<!-- Elfsight Timeline | Timline: Prod -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-dc8d2281-f493-47fe-a167-deb7cd119dbe" data-elfsight-app-lazy></div>
+<div class="elfsight-app-e8acb91e-c672-4213-b07a-3d42dbed8c41" data-elfsight-app-lazy></div>
 
   </footer>
 </body>
