--- a/тест/index.html
+++ b/тест/index.html
@@ -208,8 +208,9 @@
   </script>
 
   <footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.2.10/iframeResizer.min.js"></script>
-<iframe onload="iFrameResize(this)" src="https://d99042974861427fa529da7957da1952.elf.site" style="border:none;width:100%;"></iframe>
+<!-- Elfsight Form Builder | FB: Duplicate Pages (WIDGETS-99) -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-9886499c-1e95-4377-b06a-d9a470c3f0b0" data-elfsight-app-lazy></div>
 
   </footer>
 </body>
