--- a/тест/index.html
+++ b/тест/index.html
@@ -208,9 +208,9 @@
   </script>
 
   <footer>
-<!-- Elfsight Form Builder | FB: Duplicate Pages (WIDGETS-99) -->
+<!-- Elfsight Form Builder | Form Builder (WIDGETS-1304) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-9886499c-1e95-4377-b06a-d9a470c3f0b0" data-elfsight-app-lazy></div>
+<div class="elfsight-app-f515d350-5353-41f9-b2cc-a763a132d757" data-elfsight-app-lazy></div>
 
   </footer>
 </body>
