--- a/тест/index.html
+++ b/тест/index.html
@@ -228,9 +228,9 @@
   </script>
 
   <footer>
-<!-- Elfsight Back to Top | Back to Top: prod -->
+<!-- Elfsight Back to Top | Back to Top (WIDGETS-4109) -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-b02726e0-b391-4e9c-bb57-6c0863005be2" data-elfsight-app-lazy></div>
+<div class="elfsight-app-abd26229-450b-42b5-b86f-4596d3fb0864" data-elfsight-app-lazy></div>
 
   </footer>
 
