--- a/тест/index.html
+++ b/тест/index.html
@@ -55,9 +55,9 @@
 </div>
 
 <footer>
-  <!-- Elfsight Back to Top -->
-  <script src="https://elfsightcdn.com/platform.js" async></script>
-  <div class="elfsight-app-abd26229-450b-42b5-b86f-4596d3fb0864" data-elfsight-app-lazy></div>
+<!-- Elfsight Back to Top | Back to Top: prod -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-b02726e0-b391-4e9c-bb57-6c0863005be2" data-elfsight-app-lazy></div>
 </footer>
 
 </div> <!-- конец viewport-wrapper -->
